last alignment fix

--- a/style.css
+++ b/style.css
@@ -305,8 +305,3 @@ span.radio > label {
     font-weight: bold;
 
 }
-
-#title-section .symbolic {
-    font-size: 2.5rem;
-    height: 6rem;
-}
